Changed Arrow in HTML
- Changed Arrow in HTML

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       <div class="modal">
         <button id="modal-close" class="modal-btn">X</button>
         <div class="modal-content"></div>
-        <p id="leftArrow" class="left-arrow"><</p>
+        <p id="leftArrow" class="left-arrow">&lt</p>
         <p id="rightArrow" class="right-arrow">></p>
       </div>
     </div>
